--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
       <h1>Il connaît la musique.</h1>
       <p>Le HomePod est l’écrin idéal pour l’immense répertoire d’Apple Music. Avec l’intel­ligence de Siri et l’accès à plus de 50 millions de morceaux, il apprend vos goûts et vous aide à faire des découvertes qui élargiront votre horizon musical. Voilà qui est inouï, au sens propre du terme.</p>
     </div>
-    <img src="images/music.jpg" alt="music album">
+    <div class="music">
+      <img src="images/music.jpg" alt="music album">
+    </div>
     <footer class="footer_background">  <!-- Footer -->
       <div class="footer_container"> <!-- Delivery -->
         <hr class="footer_bar_margin_top">
